--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Ubuntu' , sans-serif;
+    font-family: 'Poppins' , sans-serif;
 }
 .inner-width
 {
